monitoring/grafana-prometheous/envoy.yml
static_resources:
  listeners:
    - name: listener_80
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: prometheus
                      domains:
                        - "prometheus.local"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: prometheus_service
                    - name: grafana
                      domains:
                        - "grafana.local"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: grafana_service
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: prometheus_service
      connect_timeout: 1s
      type: strict_dns
      load_assignment:
        cluster_name: prometheus_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: prometheus
                      port_value: 9090

    - name: grafana_service
      connect_timeout: 1s
      type: strict_dns
      load_assignment:
        cluster_name: grafana_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: grafana
                      port_value: 3000

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
